@@ -33,7 +33,7 @@ kern_return_t memutils_disassemble_at_location(unsigned long long location, int 
 		// format the memory given back
 		// for NULL terminator
 		char *bigendian = malloc((data_size * 2) + 1);
-		bzero(bigendian, (data_size * 2) + 1);
+		memset(bigendian, '\0', (data_size * 2) + 1);
 
 		for(int i=0; i<data_size; i++)
 			sprintf(bigendian, "%s%02x", bigendian, (unsigned char)data[i]);
@@ -63,7 +63,7 @@ kern_return_t memutils_dump_memory_new(unsigned long long location, vm_size_t am
 	if(amount == 0)
 		return KERN_SUCCESS;
 
-	// display memory in chunks of 0x10 bytes
+	// display memory in rows of 0x10 bytes
 	const int row_size = 0x10;
 
 	int amount_dumped = 0;
@@ -71,7 +71,7 @@ kern_return_t memutils_dump_memory_new(unsigned long long location, vm_size_t am
 
 	while(amount_dumped < amount){
 		char *membuffer = malloc(row_size);
-		bzero(membuffer, row_size);
+		memset(membuffer, '\0', row_size);
 
 		kern_return_t ret = memutils_read_memory_at_location((void *)current_location, membuffer, row_size);
 
@@ -169,73 +169,6 @@ kern_return_t memutils_write_memory_to_location(vm_address_t location, vm_offset
 	return ret;
 }
 
-// Return a neat string filled with the bytes from buffer
-// Caller is responsible for freeing it
-char *_format_dumped_memory(void *buffer, int length, int extra_padding){
-	// (length * 2) compensates for single digit bytes being represented as two digits (added leading 0)
-	// + length compensates for the spaces we're adding
-	// extra_padding accounts for spaces we may need to add
-	char dump[(length * 2) + length + extra_padding];
-	memset(dump, 0, length);
-	
-	if(extra_padding == 0){
-		for(int i=0; i<length; i++){
-			sprintf(dump, "%s%02x", dump, *(unsigned char *)(buffer + i));
-			strcat(dump, " ");
-		}
-	}
-	else{
-		int remaining_bytes = length - extra_padding;
-		for(int i=0; i<remaining_bytes; i++)
-			sprintf(dump, "%s%02x ", dump, *(unsigned char *)(buffer + i));
-
-		for(int i=0; i<extra_padding; i++)
-			sprintf(dump, "%s   ", dump);
-	}
-	
-	return strdup(dump);
-}
-
-// Helper function to print memory given a buffer,
-// the amount of bytes to print, and what base to print them in.
-void _print_dumped_memory(void *buffer, int bytes, int extra_padding, int base){
-	char *fullhex = _format_dumped_memory(buffer, bytes, extra_padding);
-
-	if(base == 10){
-		// "convert" to base 10
-		unsigned long long base10;
-		sscanf(fullhex, "%llx", &base10);
-		printf("%llu", base10);
-	}
-	else{
-		printf("%s", fullhex);
-
-		// remove all spaces in fullhex
-		char *space = NULL;
-		while((space = strchr(fullhex, ' ')) != NULL)
-			memmove(space, space + 1, strlen(space));
-		
-		int hexlen = strlen(fullhex);		
-		for(int i=0; i<hexlen; i+=2){
-			// will every two bytes from the buffer
-			char char_str[3];
-			sprintf(char_str, "%c%c", fullhex[i], fullhex[i+1]);
-			unsigned int char_to_print;
-			
-			// get the value from char_str
-			sscanf(char_str, "%x", &char_to_print);
-			
-			// check if this character is printable
-			if(isgraph(char_to_print))
-				printf("%c", char_to_print);
-			else
-				printf(".");
-		}
-	}
-
-	free(fullhex);
-}
-
 long long memutils_buffer_to_number(void *buffer, int length){
 	if(!buffer)
 		return -1;
@@ -252,72 +185,6 @@ long long memutils_buffer_to_number(void *buffer, int length){
 	free(fullhex);
 
 	return val;
-}
-
-/*
-// This function takes a buffer of data and converts it to an unsigned long long.
-unsigned long long memutils_buffer_to_number(void *buffer, int length){
-	if(!buffer)
-		return -1;
-	
-	char *fullhex = _format_dumped_memory(buffer, length, 0);
-
-	// remove all spaces in fullhex
-	char *space = NULL;
-	while((space = strchr(fullhex, ' ')) != NULL)
-		memmove(space, space + 1, strlen(space));
-
-	unsigned long long val;
-	sscanf(fullhex, "%llx", &val);
-	
-	free(fullhex);
-
-	return val;
-}
-*/
-
-// Dump memory
-void memutils_dump_memory_from_location(void *location, int amount, int bytes_per_line, int base){
-	int lines_to_print = amount / bytes_per_line;
-
-	// bytes_per_line may not divide into amount evenly
-	// be sure to keep track of anything extra we need to print
-	int extra_bytes_to_print = amount % bytes_per_line;
-
-	char membuffer[bytes_per_line];
-	memset(membuffer, 0, bytes_per_line);
-
-	int cur_line = 0;
-
-	while(cur_line < lines_to_print){
-		memutils_read_memory_at_location(location, (void *)membuffer, (vm_size_t)bytes_per_line);
-		
-		printf(" %#llx: ", (unsigned long long)location);
-
-		int cur_byte = 0;
-		
-		while(cur_byte < bytes_per_line){
-			_print_dumped_memory((void *)membuffer, bytes_per_line, 0, base);
-			cur_byte += bytes_per_line;
-		}
-
-		printf("\n");
-		
-		cur_line++;
-		location += bytes_per_line;
-	}
-
-	if(extra_bytes_to_print > 0){
-		memutils_read_memory_at_location(location, (void *)membuffer, (vm_size_t)extra_bytes_to_print);
-		
-		printf(" %#llx: ", (unsigned long long)location);
-		
-		int extra_padding = bytes_per_line - extra_bytes_to_print;
-		
-		_print_dumped_memory((void *)membuffer, bytes_per_line, extra_padding, base);
-		
-		printf("\n");
-	}
 }
 
 // Test a location to see if it's out of bounds or invalid
